# cob3_navigation_sim

./: CMakeLists.txt  README.md  package.xml
ros/config/: cob3-1.xml  cob3-1.yaml  robot.yaml
ros/launch/: robot.launch  stdr_common.launch  stdr_gui_bringup.launch  test_simulator.launch
