<?xml version="1.0"?>
<package>
	<name>cob3_navigation_sim</name>
	<version>1.0.0</version>
	<description>
        Simulator for the mobile base, as an alternative to gazebo
        adapted for the care-O-bot 3 robot
    </description>
	
	<maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
	<license>GPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
</package>